# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_static_library("libBinFlowUpdate") {
  sources = [ "bin_flow_update.cpp" ]

  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/updater_image/update_bin",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/applypatch",
    "//base/update/updater/services/include/log",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/script",
    "//base/update/updater/services/package",
    "//base/update/updater/services/package/pkg_algorithm",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/utils/include",
    "//third_party/openssl/include",
  ]
  deps = [
    "//base/update/updater/interfaces/kits/packages:libpackageExt",
    "//base/update/updater/services/applypatch:libapplypatch",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/services/package:libupdaterpackage",
    "//base/update/updater/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/openssl:ssl_source",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  subsystem_name = "updater"
  part_name = "updater"
}
