# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")
ohos_static_library("libBinFlowUpdate") {
  sources = [ "bin_flow_update.cpp" ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services/updater_image/update_bin",
    "${updater_path}/services/include",
    "${updater_path}/services/include/applypatch",
    "${updater_path}/services/include/log",
    "${updater_path}/services/include/package",
    "${updater_path}/services/include/script",
    "${updater_path}/services/package",
    "${updater_path}/services/package/pkg_algorithm",
    "${updater_path}/services/package/pkg_manager",
    "${updater_path}/utils/include",
    "//third_party/openssl/include",
  ]
  deps = [
    "${updater_path}/interfaces/kits/packages:libpackageExt",
    "${updater_path}/services/applypatch:libapplypatch",
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/log:libupdaterlog",
    "${updater_path}/services/package:libupdaterpackage",
    "${updater_path}/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/openssl:ssl_source",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  subsystem_name = "updater"
  part_name = "updater"
}
