# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_path = rebase_path("${updater_absolutely_path}", ".")
ohos_static_library("libBinFlowUpdate") {
  sources = [
    "bin_flow_update.cpp",
    "bin_process.cpp",
    "component_processor.cpp",
  ]

  include_dirs = [
    "${updater_path}/interfaces/kits/include",
    "${updater_path}/services",
    "${updater_path}/services/common",
    "${updater_path}/services/include",
    "${updater_path}/services/include/applypatch",
    "${updater_path}/services/include/log",
    "${updater_path}/services/include/package",
    "${updater_path}/services/include/script",
    "${updater_path}/services/package",
    "${updater_path}/services/package/pkg_algorithm",
    "${updater_path}/services/package/pkg_manager",
    "${updater_path}/services/package/pkg_package",
    "${updater_path}/services/script",
    "${updater_path}/utils/include",
  ]
  deps = [
    "${updater_path}/interfaces/kits/packages:libpackageExt",
    "${updater_path}/services/applypatch:libapplypatch",
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/log:libupdaterlog",
    "${updater_path}/services/package:libupdaterpackage",
    "${updater_path}/utils:libutils",
  ]
  external_deps = [
    "bounds_checking_function:libsec_static",
    "init:libbegetutil_static",
    "init:libfsmanager_static_real",
    "openssl:libcrypto_static",
  ]
  if (defined(use_ptable)) {
    deps += [ "${updater_path}/services/ptable_parse:libptableparse" ]
    external_deps = [ "cJSON:cjson_static" ]
    defines = [ "UPDATER_USE_PTABLE" ]
  }
  subsystem_name = "updater"
  part_name = "updater"
}
