# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "updater/updater"

import("//base/update/updater/updater_default_cfg.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
updater_path = rebase_path("${updater_absolutely_path}", ".")

##############################fuzztest##########################################
ohos_fuzztest("UpdaterStartUpdaterProcFuzzTest") {
  module_out_path = module_output_path
  resource_config_file =
      "${updater_path}/test/fuzztest/fuzz_src_data/ohos_test.xml"
  fuzz_config_file =
      "${updater_path}/test/fuzztest/UpdaterStartUpdaterProc_fuzzer"
  include_dirs = [
    "${updater_path}/interfaces/kits/include/",
    "${updater_path}/services/common",
    "${updater_path}/services/include/updater",
    "${updater_path}/services/package/pkg_manager",
    "${updater_path}/services/package/pkg_algorithm",
    "${updater_path}/services/include/log",
    "${updater_path}/services",
    "${updater_path}/services/include",
    "${updater_path}/services/include/package",
    "${updater_path}/services/sdcard_update",
    "${updater_path}/services/ui",
    "${updater_path}/services/ui/control",
    "${updater_path}/services/ui/driver",
    "${updater_path}/services/ui/include",
    "${updater_path}/services/ui/view",
    "${updater_path}/services/ui/language",
    "${updater_path}/utils/include",
    "${updater_path}/utils/json/",
  ]

  deps = [
    "${updater_path}/interfaces/kits/misc_info:libmiscinfo",
    "${updater_path}/interfaces/kits/packages:libpackageExt",
    "${updater_path}/services:libupdater",
    "${updater_path}/services/applypatch:libapplypatch",
    "${updater_path}/services/diffpatch/patch:libpatch",
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/log:libupdaterlog",
    "${updater_path}/services/package:libupdaterpackage",
    "${updater_path}/services/sdcard_update:libsdupdate",
    "${updater_path}/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/cJSON:cjson_static",
    "//third_party/libdrm:libdrm",
    "//third_party/libpng:libpng",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/openssl:libssl_shared",
    "//third_party/zlib:libz",
  ]

  external_deps = [ "init:libbegetutil" ]
  if (updater_ui_support) {
    external_deps += [ "ui_lite:libupdater_layout" ]
  }

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "UpdaterStartUpdaterProc_fuzzer.cpp" ]
}
