# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "updater/do_partitions"

import("//base/update/updater/updater_default_cfg.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
updater_path = rebase_path("${updater_absoulutely_path}", ".")

##############################fuzztest##########################################
ohos_fuzztest("DoPartitionsFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${updater_path}/test/fuzztest/dopartitions_fuzzer"
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "${updater_path}/utils/include",
    "${updater_path}/interfaces/kits/include/",
    "${updater_path}/services/include/fs_manager",
    "${updater_path}/services/include/log",
    "${updater_path}/services",
    "${updater_path}/services/include",
  ]

  deps = [
    "${updater_path}/interfaces/kits/misc_info:libmiscinfo",
    "${updater_path}/interfaces/kits/packages:libpackageExt",
    "${updater_path}/services/applypatch:libapplypatch",
    "${updater_path}/services/diffpatch/patch:libpatch",
    "${updater_path}/services/fs_manager:libfsmanager",
    "${updater_path}/services/log:libupdaterlog",
    "${updater_path}/services/package:libupdaterpackage",
    "${updater_path}/services/script:libupdaterscript",
    "${updater_path}/services/ui:libui",
    "${updater_path}/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/libdrm:libdrm",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:libcrypto_static",
    "//third_party/openssl:ssl_source",
    "//third_party/zlib:libz",
  ]

  external_deps = [
    "c_utils:utils",
    "init:libbegetutil",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "dopartitions_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DoPartitionsFuzzTest",
  ]
}
###############################################################################
