# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "updater/updater"

import("//base/update/updater/updater_default_cfg.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
updater_path = rebase_path("${updater_absolutely_path}", ".")

##############################fuzztest##########################################
ohos_fuzztest("GetUpdatePackageInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${updater_path}/test/fuzztest/getupdatepackageinfo_fuzzer"
  include_dirs = [
    "${updater_path}/utils/include",
    "${updater_path}/interfaces/kits/include/",
    "${updater_path}/services/common",
    "${updater_path}/services/include/updater",
    "${updater_path}/services/include/package",
    "${updater_path}/services",
    "${updater_path}/services/include",
  ]

  deps = [
    "${updater_path}/services:libupdater",
    "${updater_path}/services/log:libupdaterlog",
    "${updater_path}/services/package:libupdaterpackage",
    "${updater_path}/utils:libutils",
  ]

  external_deps = [
    "bounds_checking_function:libsec_static",
    "bzip2:libbz2",
    "c_utils:utils",
    "init:libbegetutil_static",
    "libdrm:libdrm",
    "lz4:liblz4_static",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "zlib:libz",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "getupdatepackageinfo_fuzzer.cpp" ]
}
